[package]
name = "html-url-scraper"
version = "0.1.0"
authors = ["Evgenii Pochechuev <pchchv@protom.me>"]
edition = "2021"
description = "Crate for scraping URLs from HTML pages"
readme = "README.md"
repository = "https://github.com/pchchv/html-url-scraper"
license = "Apache-2.0"
keywords = ["url", "scraper", "html"]
categories = ["web-programming"]


[dependencies]
